# c-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
.github/workflows/: build.yml
examples/: search_min_elem_in_array.c  search_substr.c
src/: CMakeLists.txt
src/c-compiler/: CMakeLists.txt
src/c-compiler/c-compiler/: main.cpp
src/grammar/: CLexer.g4  CMakeLists.txt  CParser.g4
src/libc/: CMakeLists.txt
src/libc/libc/: analyzer.cpp  analyzer.hpp  code_generator.cpp  code_generator.hpp  dump_tokens.cpp  dump_tokens.hpp  parser.cpp  parser.hpp  symtab.cpp  symtab.hpp
src/libc/libc/ast/: ast.cpp  ast.hpp  code_generator.cpp  code_generator.hpp  type_analyzer.cpp  type_analyzer.hpp  visitor.hpp  xml_serializer.cpp  xml_serializer.hpp
src/libc/libc/ast/detail/: builder.cpp  builder.hpp  precedence_builder.cpp  precedence_builder.hpp
src/libc/libc/ast/symtab/: symbols.hpp  symtab.cpp  symtab.hpp
src/libc/libc/ast/symtab/detail/: builder.cpp  builder.hpp
test-additional-files/parser-test/: correct_out.xml  parser_test.c
test/libc/: CMakeLists.txt
test/libc/libc/: analyzer.cpp  code_generator.cpp  dump_tokens.cpp  dump_tokens.hpp  dump_tokens.test.cpp  dump_tokens.test.hpp  parser.cpp  parser.test.cpp  source_dir.hpp.in  symtab.cpp
